--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,9 @@
     
     <!-- CSS Personalizado Modular -->
     <link rel="stylesheet" href="{% static 'styles/modular/main.css' %}">    
+
+    {% block extra_css %}{% endblock %}
+
 </head>
 <body>
 
