Endereço do maps no footer.

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,8 +129,12 @@
                     <li><img src="{% static '/fotos/ícones/whatsapp-preta.png' %}" alt="WhatsApp" class="contato-icon"> (81) 90000-0000</li>
                     <li><img src="{% static '/fotos/ícones/telefone.png' %}" alt="Telefone" class="contato-icon"> (81) 90000-0000</li>
                     <li><img src="{% static '/fotos/ícones/email.png' %}" alt="Email" class="contato-icon"> contato@segundaigreja.org.br</li>
-                    <li><img src="{% static '/fotos/ícones/localizacao.png' %}" alt="Localização" class="contato-icon"> Rua Santa Izabel, 425</li>
-                    <li><img src="{% static '/fotos/ícones/localizacao.png' %}" alt="Localização" class="contato-icon" style="opacity: 0;"> Casa Amarela, Recife - PE</li>
+                    <li>
+                        <a href="https://www.google.com/maps/search/?api=1&query=Rua+Santa+Izabel,+425+-+Recife,+PE" target="_blank" style="display: flex; align-items: center; color: inherit; text-decoration: none;">
+                            <img src="{% static '/fotos/ícones/localizacao.png' %}" alt="Localização" class="contato-icon">
+                            <span>Rua Santa Izabel, 425 - Casa Amarela, Recife - PE</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             
