--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,7 @@
                         Agenda
                     </a>
                     <div class="dropdown-menu" aria-labelledby="agendaDropdown">
-                        <a class="dropdown-item" href="#">Horários de Culto</a>
-                        <a class="dropdown-item" href="#">Reuniões de Ministério</a>
+                        <a class="dropdown-item" href="{% url 'agenda' %}">Agenda Semanal</a>
                         <a class="dropdown-item" href="#">EBD</a>
                         <a class="dropdown-item" href="#">Aulas de Música</a>
                     </div>
